# chatops

./: .env.example  .gitignore  .ignore  pyproject.toml  requirements.txt
config/: chatops.opencode.toml  chatops.opencode.toml.example
scripts/: opencode_serve.sh
src/chatops/: __init__.py  utils.py
src/chatops/agents/: base.py  opencode.py
src/chatops/commands/: parser.py
src/chatops/core/: models.py
src/chatops/services/: chatops.py
tests/: test.toml  test_fastapi_opencode.py  test_lark_bot.py  test_opencode_serve.py  test_opencode_serve_v2.py  test_toml.py
