[project]
name = "chatops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yaroxy", email = "yaroxywithyou@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
chatops = "chatops:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple/"